src/tailwind/critical.scss
@import url('https://cdn.jsdelivr.net/npm/prism-themes@1.5.0/themes/prism-material-light.css');

@tailwind base;
@tailwind components;
@tailwind utilities;


@layer base {
  html {
    @apply font-mono text-xl text-base-content bg-base-100 antialiased overflow-x-hidden;
  }
  body {
    @apply container mx-auto px-4 sm:px-4 md:px-8 lg:px-10 md:max-w-screen-md lg:max-w-screen-lg xl:max-w-screen-xl 2xl:max-w-screen-2xl;
  }
}

@layer base {
  header {
    @apply font-bold leading-6 text-sm sm:text-base ;
    @apply flex flex-col gap-y-4 lg:flex-row justify-between lg:items-center mt-10 sm:mt-10 md:mt-10 lg:mt-10;

    .logo {
      @apply link link-primary link-hover;
    }
  }

  header a {
    @apply link link-hover hover:link-primary;
  }

  header ul {
    @apply flex flex flex-wrap gap-2 sm:gap-6 md:gap-8 lg:gap-10 whitespace-nowrap;
  }

  footer {
    @apply font-semibold leading-6 text-sm;
    @apply flex justify-between py-10 sm:py-12 md:py-16 lg:py-20;
    @apply grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-y-4 sm:gap-y-6 md:gap-y-8 items-start;

    .logo {
      @apply link link-primary link-hover col-span-full;
    }
  }

  footer a {
    @apply link link-hover hover:link-primary;
  }

  footer ul {
    @apply flex flex-col gap-1 whitespace-nowrap;
  }

  footer nav {
    @apply pl-2 border-l border-primary;
  }

}

@layer base {
  main {
    @apply prose max-w-none prose-sm md:prose-base lg:prose-lg xl:prose-xl 2xl:prose-2xl;
    @apply prose-a:link prose-a:link-primary;
  }
}

